made selectors, fetched options from json

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -1,15 +1,20 @@
 <section class="main">
-    <script
-  class="amocrm_oauth"
-  charset="utf-8"
-  data-client-id="a1fe66c2-8afb-4e08-97ac-45289850dbb8"
-  data-title="Button"
-  data-compact="false"
-  data-class-name="className"
-  data-color="default"
-  data-state="state"
-  data-error-callback="functionName"
-  data-mode="popup"
-  src="https://www.amocrm.ru/auth/button.min.js"
-></script>
+  <div class="main__container">
+    <div class="main__select_wrapper">
+      <div class="main__select_container">
+        <select class="main__select" name="season" id="season">
+        </select>
+        
+      </div>
+      <div class="main__select_container">
+        <select class="main__select" name="serie" id="serie">
+        </select>
+      </div>
+      <div class="main__select_container">
+        <select class="main__select"  name="voice" id="voice">
+        </select>
+      </div>
+    </div>
+  </div>
 </section>
+
